# plamo-embed

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
py/: blog_search_demo.py
ts/: package.json  pnpm-lock.yaml
ts/src/: 01_plamo-embed-muri.mts  02_pglite.mts  index.mts
